# pypolca

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  benchmark.py  benchmark_scaling.py  compile_commands.json  compile_tryout.sh  pyproject.toml  tryout_direct
.cache/clangd/index/: bindings.cpp.B62058F7D1656372.idx  em_engine.cpp.C7E364F4CA8D8FE6.idx  em_engine.h.3D93F7C5C41CB7D1.idx  math_ops.cpp.D09E16DD3A980188.idx  math_ops.h.9BB8845A772DDDD3.idx  tryout.cpp.B7D0EFB603144E8B.idx  types.h.937303ABC88CAD0D.idx
.github/workflows/: ci.yml  docs.yml  wheels.yml
docs/: CPP_DEBUG.md  CPP_TUTORIAL.md  Doxyfile  EIGEN_CHEATSHEET.md  EM_ENGINE_REVIEW.md  LOG_LIKELIHOOD_BETA_IMPACT.md  LOG_SUM_EXP_AND_LIKELIHOOD_OVERFLOW.md  MATH_OPS_REVIEW.md  Makefile  NOTES.md  OPTIMIZATION_ALGORITHM.md  PERFORMANCE.md  RANDOM_INITIALIZATION.md  RANDOM_INIT_PROBABILITIES.md  benchmark_observations.md
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/api/: cpp.rst  python.rst
docs/source/dev/: changelog.rst  contributing.rst
docs/source/guide/: examples.rst  quickstart.rst
examples/: basic_fit.py  debug_ylik.py  quick_analyses.py  tryout.cpp
polca/: __init__.py  api.py  utils.py
pypolca/: __init__.py  api.py  utils.py
pypolca/data/: __init__.py  _dataset.py  carcinoma.csv  cheating.csv  election.csv  gss82.csv  values.csv
scripts/: benchmark_covariates.py  benchmark_scaling.py  parity_covariates_py.py  parity_covariates_r.R  parity_deep_py.py  parity_final.py  parity_se_deep_r.R  parity_se_py.py  parity_se_r.R  parity_vce_r.R  quick_analysis.py
src/cpp/: CMakeLists.txt  bindings.cpp
src/cpp/core/: em_engine.cpp  math_ops.cpp
src/cpp/include/polca/: em_engine.h  math_ops.h  types.h
src/cpp/include/pypolca/: em_engine.h  math_ops.h  types.h
tests/python/: test_basic.py  test_fit_edge_cases.py  test_lca_result.py  test_math_ops.py  test_r_comparison.py
