[build-system]
requires = ["scikit-build-core>=0.5", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pypolca"
version = "0.1.0"
description = "Polytomous Variable Latent Class Analysis in C++ with Python bindings"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "GPL-2.0-or-later"}
authors = [
    {name = "Your Name", email = "you@example.com"},
]
keywords = ["latent class analysis", "EM algorithm", "mixture model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20",
    "polars",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "scipy",
]

[tool.scikit-build]
minimum-version = "0.5"
build-dir = "build/{wheel_tag}"
cmake.verbose = true
cmake.args = ["-GNinja"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
