[build-system]
requires = ["scikit-build-core>=0.5", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "polca"
version = "0.4.0"
description = "Polytomous Variable Latent Class Analysis in C++ with Python bindings"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-2.0-or-later"}
authors = [
    {name = "Marc-André Chénier", email = "marcandrechenier@gmail.com"},
]
keywords = ["latent class analysis", "EM algorithm", "mixture model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20",
    "polars",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy",
    "ruff",
]
test = [
    "pytest>=7.0",
    "numpy",
    "polars",
    "scipy",
]

[tool.scikit-build]
minimum-version = "0.5"
build-dir = "build/{wheel_tag}"
cmake.verbose = true
cmake.args = ["-GNinja", "-DCMAKE_EXPORT_COMPILE_COMMANDS=ON"]
wheel.packages = ["pypolca"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests -x -q --ignore={project}/tests/python/test_r_comparison.py"
test-requires = ["pytest", "numpy", "polars"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["pypolca"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pypolca._core"
ignore_missing_imports = true
